src/z80asm/z80asm2/t/10-expr/expected/error_undef.txt
% z88dk-z80asm -v -dump-after-cmdline @t/10-expr//input/error_undef.lst t/10-expr//input/empty.asm
t/10-expr/input/error_undef.lst:1:7: error: Undefined constant: FOO
    -DE00=FOO
          ^
t/10-expr/input/error_undef.lst:2:9: error: Undefined constant: BAR
    -DE01=1+BAR
            ^
t/10-expr/input/error_undef.lst:3:7: error: Undefined constant: BAZ
    -DE02=BAZ*3
          ^
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
verbose	1
cpu_id	z80
ucase_symbols	0
float_format	genmath
preprocess_only	0
swap_ix_iy	0
date_stamp	0
filler_byte	0
dump_after_cmdline	1
dump_after_tokenization	0
dump_after_directives	0
dump_after_macro_expansion	0
dump_after_hla_expansion	0
dump_after_synth_expansion	0
dump_after_preprocessing	0
dump_after_parse	0
dump_after_symbol_collection	0
m4_options	
perl_options	
cpp_options	
output_dir	
global_def	__CPU_Z80__	1
global_def	__CPU_ZILOG__	1
global_def	__FLOAT_GENMATH__	1
input_file	t/10-expr/input/empty.asm
